@@ -47,13 +47,13 @@ else:
 
 ###############################################################################
 
-setup (	name="pycurl",
-      	version="0.4.10",
-      	description="PycURL -- cURL library module for Python",
-      	author="Kjetil Jacobsen",
-      	author_email="kjetilja@cs.uit.no",
-      	url="http://pycurl.sourceforge.net/",
-      	ext_modules=[Extension(name="pycurl",
+setup (name="pycurl",
+       version="0.4.10",
+       description="PycURL -- cURL library module for Python",
+       author="Kjetil Jacobsen",
+       author_email="kjetilja@cs.uit.no",
+       url="http://pycurl.sourceforge.net/",
+       ext_modules=[Extension(name="pycurl",
                                sources=["src/curl.c"],
                                include_dirs=include_dirs,
                                library_dirs=library_dirs,
